# spendrail

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  render.yaml  spend-rail.service
src/app/: __init__.py  config.py  logging_config.py  main.py
src/app/api/: __init__.py  router.py
src/app/api/endpoints/: __init__.py  firebase.py  health.py  images.py
src/app/core/: __init__.py  exceptions.py
src/app/middleware/: __init__.py  cors.py  error_handler.py  logging.py  request_id.py
src/app/models/: __init__.py  schemas.py
src/app/services/: __init__.py  firebase.py  gemini.py  image_processor.py
src/app/tasks/: __init__.py  background.py
